--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
   <description>Charges calculation for utility bills</description>
   <properties>
     <java.version>1.8</java.version>
+    <start-class>com.freshCode.utilityChargesCalculator.UtilityChargesCalculatorApplication</start-class>
   </properties>
+  <packaging>war</packaging>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
