--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,16 @@
         </configuration>
       </plugin>
       <plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<server>tomcat-development-server</server>
+					<port>8060</port>
+					<path>/utilityApp</path>
+				</configuration>
+			</plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
