Updating pom to deploy to tomcat. Adding the deploy stage in jenkins

--- a/pom.xml
+++ b/pom.xml
@@ -73,16 +73,19 @@
           <verbose>true</verbose>
         </configuration>
       </plugin>
+
       <plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<server>tomcat-development-server</server>
-					<port>8060</port>
-					<path>/utilityApp</path>
-				</configuration>
-			</plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+            <url>http://192.168.0.135:8080/manager/text</url>
+            <username>yasub</username>
+            <password>App@1234</password>
+            <server>TomcatServer</server>
+            <path>/utilityApp</path>
+        </configuration>
+    </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
