--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,20 @@
     <start-class>com.freshCode.utilityChargesCalculator.UtilityChargesCalculatorApplication</start-class>
   </properties>
   <packaging>war</packaging>
+
+  <profiles>
+    <profile>
+      <id>localhost</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <tomcat-server>tomcat</tomcat-server>
+        <tomcat-url>http://192.168.0.136:8080/manager/text</tomcat-url>
+      </properties>
+    </profile>
+  </profiles>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -79,13 +93,13 @@
         <artifactId>tomcat7-maven-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-            <url>http://192.168.0.135:8080/manager/text</url>
-            <username>yasub</username>
-            <password>App@1234</password>
-            <server>TomcatServer</server>
-            <path>/utilityApp</path>
+          <server>${tomcat-server}</server>
+          <username>${tomcat.username}</username>
+          <password>${tomcat.password}</password>
+          <url>${tomcat-url}</url>
+          <path>/utilityApp</path>
         </configuration>
-    </plugin>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
