Include google app engine properties and update pom accordingly

--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,16 @@
   <name>utilityChargesCalculator</name>
   <description>Charges calculation for utility bills</description>
   <properties>
-    <java.version>1.8</java.version>
     <start-class>com.freshCode.utilityChargesCalculator.UtilityChargesCalculatorApplication</start-class>
+
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
 
     <sonar.projectKey>yashashmi_UtilityChargesCalculator</sonar.projectKey>
     <sonar.organization>yashashmi-github</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <profiles>
     <profile>
@@ -81,11 +83,9 @@
       <version>2.10.0</version>
       <scope>test</scope>
     </dependency>
-
-
   </dependencies>
-  <build>
 
+  <build>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -94,6 +94,11 @@
     </resources>
     <plugins>
       <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.3.2</version>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
@@ -101,11 +106,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <verbose>true</verbose>
-        </configuration>
       </plugin>
 
       <plugin>
