--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <name>utilityChargesCalculator</name>
   <description>Charges calculation for utility bills</description>
   <properties>
+    <packagingType>jar</packagingType>
     <start-class>com.freshCode.utilityChargesCalculator.UtilityChargesCalculatorApplication</start-class>
 
     <maven.compiler.target>11</maven.compiler.target>
@@ -24,7 +25,7 @@
     <sonar.organization>yashashmi-github</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
-  <packaging>jar</packaging>
+  <packaging>${packagingType}</packaging>
 
   <profiles>
     <profile>
@@ -96,7 +97,7 @@
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
-        <version>1.3.2</version>
+        <version>2.4.0</version>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
