--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>utilityChargesCalculator</name>
   <description>Charges calculation for utility bills</description>
+
   <properties>
     <packagingType>jar</packagingType>
     <start-class>com.freshCode.utilityChargesCalculator.UtilityChargesCalculatorApplication</start-class>
@@ -24,10 +25,17 @@
     <sonar.projectKey>yashashmi_UtilityChargesCalculator</sonar.projectKey>
     <sonar.organization>yashashmi-github</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
+    <jacoco.version>0.8.3</jacoco.version>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    <sonar.language>java</sonar.language>
+
   </properties>
   <packaging>${packagingType}</packaging>
 
-  <profiles>
+  <!-- <profiles>
     <profile>
       <id>localhost</id>
       <activation>
@@ -36,16 +44,9 @@
       <properties>
         <tomcat-server>tomcat</tomcat-server>
         <tomcat-url>http://192.168.0.136:8080/manager/text</tomcat-url>
-
-        <jacoco.version>0.8.3</jacoco.version>
-        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-        <sonar.language>java</sonar.language>
-
       </properties>
     </profile>
-  </profiles>
+  </profiles> -->
 
   <dependencies>
     <dependency>
@@ -114,7 +115,7 @@
         <artifactId>tomcat7-maven-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-          <server>${tomcat-server}</server>
+          <!-- <server>${tomcat-server}</server> -->
           <username>${tomcat.username}</username>
           <password>${tomcat.password}</password>
           <url>${tomcat-url}</url>
